show model prediction in UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="whiteAlpha">#10FFFFFF</color>
     <color name="blue">#0095ff</color>
+    <color name="gold">#FFAA00</color>
 </resources>
