--- a/app/src/main/res/layout/fragment_match_details.xml
+++ b/app/src/main/res/layout/fragment_match_details.xml
@@ -75,6 +75,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/away_textView" />
 
+    <TextView
+        android:id="@+id/model_prediction_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Model Prediction: Evaluating..."
+        android:textColor="@color/gold"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/any_chart_view" />
+
     <View
         android:id="@+id/view3"
         android:layout_width="wrap_content"
@@ -83,7 +96,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/any_chart_view" />
+        app:layout_constraintTop_toBottomOf="@+id/model_prediction_text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMatch"
